deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitirme-ns

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitirme-deployment
  namespace: bitirme-ns
spec:
  selector:
    matchLabels:
      app: bitirme-app
  replicas: 3
  template:
    metadata:
      labels:
        app: bitirme-app 
    spec:
      containers:
      - name: bitime-container
        image: us-west1-docker.pkg.dev/bitirme-387623/bitirme/bitirme_img:29
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: bitirme-service-1
  namespace: bitirme-ns
spec:
  selector:
    app: bitirme-app 
  ports:
    - port: 8080
      targetPort: 3000
  type: NodePort
  
---
