deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitirme-deployment2
  namespace: bitirme-ns
spec:
  selector:
    matchLabels:
      app: bitirme-app2
  replicas: 3
  template:
    metadata:
      labels:
        app: bitirme-app2
    spec:
      containers:
      - name: bitime-container2
        image: us-west1-docker.pkg.dev/bitirme-387623/bitirme/bitirme2_img:5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: bitirme-service-2
  namespace: bitirme-ns
spec:
  selector:
    app: bitirme-app2
  ports:
    - port: 8080
      targetPort: 80
  type: LoadBalancer
