ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitirme-ingress
  namespace: bitirme-ns
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitirme-service-1
            port:
              number: 80  
      - path: /bitirme2
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitirme-service-2
            port:
              number: 80
